Fix payment form on small sizes.

--- a/src/components/payment-form/payment-form.styl
+++ b/src/components/payment-form/payment-form.styl
@@ -36,17 +36,11 @@
 		clear: left
 
 	.form-group-control
-		@media $media-sm-up
-			margin-left: $thumbnail-width + $grid-gutter-width
+		margin-left: $thumbnail-width + $grid-gutter-width
 
 	.form-errors
-		@media $media-sm-up
-			margin-left: $thumbnail-width + $grid-gutter-width
+		margin-left: $thumbnail-width + $grid-gutter-width
 
 	.payment-methods
-		text-align: center
-
-		@media $media-sm-up
-			text-align: left
-			margin-left: $thumbnail-width + $grid-gutter-width
-
+		text-align: left
+		margin-left: $thumbnail-width + $grid-gutter-width
